# chatbot-whatsapp-llm

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONFIGURACION_COMPLETADA.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCS_INDEX.md  Dockerfile  Dockerfile.scheduler  Dockerfile.worker-web  FIXES_APPLIED.md  GUIA_RAPIDA.md  IMPLEMENTACION_COMPLETA.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  README_COMPLETE.md  README_EN.md  README_OLD.md  README_OPTIMIZED.md  RELEASE_NOTES.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SECURITY_UPDATES.md  TEST_RESULTS.md  TROUBLESHOOTING.md  USER_GUIDE.md  _pytest_auth_out.txt  _pytest_auth_out2.txt  _pytest_auth_out3.txt  _pytest_auth_out4.txt  (+86 more)
${PLAYWRIGHT_PROFILE_DIR}/: Last Browser  Local State
.github/: dependabot.yml
Docs/: Perfil.txt  Ultimo_contexto.txt  ejemplo_chat.txt
Frontend/: README.md  TESTS_README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.jest.json  tsconfig.tsbuildinfo
alembic/: env.py  script.py.mako
config/: payload.json  payload_reasoner.json  playwright_config.json
data/: business_config.json  manual_queue.json
docs/: API.md  BETA_GO_LIVE_CHECKLIST.md  DEPLOYMENT.md  SECURITY_RUNBOOK.md
scripts/: check_settings.py
templates/: chat_quick.html
tests/: __init__.py  conftest.py  run_tests.py  test_alert_system.py  test_api_endpoints.py  test_audio_transcriber.py  test_auth_system.py  test_cache_system.py  test_crypto.py  (+10 more)
(+469 files in other folders)
